--- a/css/style.css
+++ b/css/style.css
@@ -14,13 +14,14 @@ html, body {
 }
 
 .center{
-    width: 1280px;
+    max-width: 1280px;
+    width: 100%;
     margin: 0 auto;
 }
 
 .header{
-    min-width: 1280px;
     width: 100%;
+    padding: 0 2%;
     height: 60px;
     background-color: #212343;
 }
@@ -127,8 +128,7 @@ html, body {
 /* -- new section -- */
 
 .container-following{
-    min-width: 1280px;
-    padding: 40px 0;
+    padding: 40px 2%;
     background-color: rgb(221, 221, 221);
     text-align: center;
 }
@@ -140,7 +140,8 @@ html, body {
 .container-following p{
     display: inline-block;
     margin: 15px 0;
-    width: 698px;
+    width: 100%;
+    max-width: 768px;
     text-align: justify;
 }
 
@@ -158,8 +159,7 @@ html, body {
 /* -- Section 1 -- */
 
 .section-1{
-    min-width: 1280px;
-    padding: 90px 0;
+    padding: 90px 2%;
 }
 
 .section-1 h2{
@@ -175,7 +175,7 @@ html, body {
 
 .container-single{
     float: left;
-    width: 33.33%;
+    width: 33.3333%;
     padding: 30px;
 }
 
@@ -198,4 +198,83 @@ html, body {
 
 .footer p{
     margin-top: 8px;
+}
+
+/* ----------- RESPONSIVO ------------ */
+
+@media screen and (max-width: 1024px){
+    .header{
+        height: auto;
+        width: 100%;
+        padding: 15px 0;
+        text-align: center;
+    } 
+    .header img{
+        margin: 0;
+    }
+
+    .container-banner{
+        width: 100%;
+        padding: 40px 2%;
+        height: auto;
+       text-align: center;
+    }
+
+    .form{
+        max-width: 400px;
+        padding: 10px;
+        width: 60%;
+        height: 100%;
+        float: right;
+        top: 0;
+    }
+
+    .container-list{
+        margin-top: 30;
+        padding: 30px;
+        float: left;
+        width: 40%;
+        max-width: 500px;
+        height: auto;
+    }
+
+    .input-container input[type=text]{
+        width: 100%;
+        height: 55px;
+    }
+    
+    .input-submit-container input[type=submit]{
+        max-width: 280px;
+        width: 100%;
+        height: 56px;
+    }
+
+}
+
+@media screen and (max-width: 768px){
+    .container-list{
+        margin-top: 0;
+        float: none;
+        display: inline-block;
+        width: 100%;
+    }
+    .form{
+        float: none;
+        display: inline-block;
+        width: 100%;
+        margin-top: 30px;
+    }
+
+    .container-single{
+        display: inline-block;
+        float: none;
+        width: 100%;
+        max-width: 600px;
+        padding: 30px 0;
+    }
+
+    .container-following p{
+        padding-right: 4%;
+        padding-left: 4%;
+    }
 }
